--- a/src/html/views/index-login.html
+++ b/src/html/views/index-login.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="firstscreen__info firstscreen__info3 display display_03">
-            <div class="h1_login">Sign up to<br>unlock girls</div>
+            <div class="h1_login">Enter email&nbsp;<br class="d-xl-none"> to&nbsp;<br class="d-none d-xl-block">unlock girls</div>
             <form action="">
               <div class="firstscreen__header-inner">
                 <div class="form-group form-group_login">
@@ -53,7 +53,7 @@
                   <input class="form-control form-control_login" type="password" placeholder="Password">
                 </div>
                 <div class="form-group form-group_login form-group_login-btn">
-                  <button class="btn-login btn btn_w100">Sign Up</button>
+                  <button class="btn-login btn btn_w100">Log In</button>
                 </div>
               </div>
             </form>
