--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,3 +1,8 @@
 .header {
-  background-color: blue;
+  &.header_page {
+    padding: 41px 0 45px;
+    @media (min-width: 992px) {
+      padding: 100px 0 124px;
+    }
+  }
 }
