--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,8 +2,8 @@
 @import 'variables.scss';
 @import 'fonts.scss';
 @import 'body.scss';
-// @import 'typo.scss';
+@import 'typo.scss';
 @import 'header.scss';
 // @import 'index.scss';
-// @import 'logo.scss';
+@import 'logo.scss';
 @import 'footer.scss';
