--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,8 @@
 @import 'fonts.scss';
 @import 'body.scss';
 @import 'typo.scss';
+@import 'form-controls.scss';
+@import 'customcheck.scss';
 @import 'header.scss';
 // @import 'index.scss';
 @import 'logo.scss';
