--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import 'typo.scss';
 @import 'form-controls.scss';
 @import 'customcheck.scss';
+@import 'btn.scss';
 @import 'header.scss';
 // @import 'index.scss';
 @import 'logo.scss';
