--- a/src/html/views/unsubscribe.html
+++ b/src/html/views/unsubscribe.html
@@ -1,6 +1,6 @@
 <%= _.template(require('./../includes/header.html'))() %>
   <main class="main">
-    <div class="container container_unsubscribe">
+    <div class="container container_text">
       <div class="row">
         <div class="col-12 col-xl-4 text-center text-xl-start">
           <h2>Your <span class="d-none d-xl-block">Subsc<span>-<br></span>riptions</span><span class="d-block d-xl-none">Subscriptions</span></h2>
