--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'customcheck.scss';
 @import 'btn.scss';
 @import 'header.scss';
+@import 'settings.scss';
 // @import 'index.scss';
 @import 'logo.scss';
 @import 'footer.scss';
