--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,13 +7,14 @@ $btn_bg_color_hover:        #FFFA72;
 $btn_bg_color_active:       #FFF;
 /**/$bg_dark_1:                 #1E1C1C;
 /**/$bg_dark_2:                 #434343;
-/**/$bg_light_1:                #515151;
+$bg_light_1:                #DCDFE3;
 /**/$bg_light_2:                #ACFFF1;
 /**/$bg_light_3:                #F6EFDF;
 /**/$bg_light_4:                #E8E1DF;
 $font_color:                #FFF;
 $font_color2:               #525F73;
 $font_color3:               #6388C2;
+$font_color4:               #98A5B9;
 $font_family:               "Inter", sans-serif;
 $font_weight:               400;
 $font_size:                 16px;
