--- a/src/html/views/settings.html
+++ b/src/html/views/settings.html
@@ -26,35 +26,33 @@
               <div class="form-group form-group_input">
                 <input class="form-control" type="text" placeholder="Full Name">
               </div>
-              <div class="form-group form-group_check1">
-                <div class="customcheck customcheck_radio">
-                  <input type="radio" class="customcheck__input" name="radio1" id="radio1" autocomplete="off">
+              <div class="form-group form-group_check1 d-flex justify-content-start align-items-center">
+                <div class="customcheck customcheck_radio customcheck_radio-inline">
+                  <input type="radio" class="customcheck__input" name="radio1" id="radio1" checked autocomplete="off">
                   <label class="customcheck__label" for="radio1">
-                    <div class="customcheck__icon"><div class="customcheck__mark"></div></div>
-                    <div class="customcheck__txt">Male</div>
-                  </label>
-                </div>
-                <div class="customcheck customcheck_radio">
-                  <input type="radio" class="customcheck__input" name="radio1" id="radio2" checked autocomplete="off">
-                  <label class="customcheck__label" for="radio2">
                     <div class="customcheck__icon"><div class="customcheck__mark"></div></div>
                     <div class="customcheck__txt">Female</div>
                   </label>
                 </div>
+                <div class="customcheck customcheck_radio customcheck_radio-inline">
+                  <input type="radio" class="customcheck__input" name="radio1" id="radio2" autocomplete="off">
+                  <label class="customcheck__label" for="radio2">
+                    <div class="customcheck__icon"><div class="customcheck__mark"></div></div>
+                    <div class="customcheck__txt">Male</div>
+                  </label>
+                </div>
               </div>
-              <div class="form-group form-group_input m-xl-0">
+              <div class="form-group form-group_input">
                 <textarea class="form-control" placeholder="About"></textarea>
               </div>
               <div class="form-group form-group_check">
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="form-group-check-wrap__item">
-                    <div class="customcheck customcheck_switch customcheck_switch-inline">
-                      <input type="checkbox" class="customcheck__input" name="check1" id="switch1" autocomplete="off">
-                      <label class="customcheck__label" for="switch1">
-                        <div class="customcheck__icon"><div class="customcheck__mark"></div></div>
-                        <div class="customcheck__txt">Notify me of site updates</div>
-                      </label>
-                    </div>
+                  <div class="customcheck customcheck_switch customcheck_switch-inline">
+                    <input type="checkbox" class="customcheck__input" name="check1" id="switch1" autocomplete="off">
+                    <label class="customcheck__label" for="switch1">
+                      <div class="customcheck__icon"><div class="customcheck__mark"></div></div>
+                      <div class="customcheck__txt">Notify me of site updates</div>
+                    </label>
                   </div>
                 </div>
               </div>
