--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,7 +8,7 @@ $btn_bg_color_active:       #FFF;
 /**/$bg_dark_1:                 #1E1C1C;
 /**/$bg_dark_2:                 #434343;
 $bg_light_1:                #DCDFE3;
-/**/$bg_light_2:                #ACFFF1;
+$bg_light_2:                #FFF;
 /**/$bg_light_3:                #F6EFDF;
 /**/$bg_light_4:                #E8E1DF;
 $font_color:                #FFF;
@@ -37,22 +37,22 @@ $footer_text_color_hover:   $link_hover_color;
 $footer_text_color_active:  $link_active_color;
 
 //Form
-/**/$input_bg:                  $bg_light_1;
-/**/$input_hover_bg:            rgba($btn_bg_color, 0.19);
-/**/$input_txt_family:          $font_family;
-/**/$input_txt_color:           $font_color3;
-/**/$input_hover_txt_color:     $font_color3;
-/**/$input_placeholder_color:   $font_color2;
-/**/$input_txt_xs_size:         15px;
-/**/$input_txt_xs_lh:           1.5;
-/**/$input_txt_size:            21px;
-/**/$input_txt_lh:              1.5;
-/**/$input_border_color:        $input_bg;
-/**/$input_border:              none;
-/**/$input_hover_border:        $input_border;
-/**/$input_border_radius:       100px;
-/**/$textarea_border_radius:    23px;
-/**/$textarea_border_radius_mob:23px;
+$input_bg:                  $bg_light_2;
+$input_hover_bg:            $input_bg;
+$input_txt_family:          $font_family;
+$input_txt_color:           $font_color3;
+$input_hover_txt_color:     $font_color3;
+$input_placeholder_color:   $font_color4;
+$input_txt_xs_size:         15px;
+$input_txt_xs_lh:           1.5;
+$input_txt_size:            22px;
+$input_txt_lh:              1.5;
+$input_border_color:        $input_bg;
+$input_border:              none;
+$input_hover_border:        $input_border;
+$input_border_radius:       0;
+$textarea_border_radius:    0;
+$textarea_border_radius_mob:0;
 
 
 //Bootstrap container width
