--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -13,7 +13,8 @@
 .settings-photo {
   margin: 0 auto;
   position: relative;
-  @media (min-width: 366px) {
+  width: 100%;
+  @media (min-width: 400px) {
     width: 280px;
     max-width: 280px;
   }
@@ -40,8 +41,8 @@
   justify-content: center;
   width: 100%;
   max-width: 100%;
-  height: 246px;
-  max-height: 246px;
+  height: 350px;
+  max-height: 350px;
   border-radius: 0;
   background-color: $bg_light_1;
   background-repeat: no-repeat;
@@ -87,5 +88,3 @@
     margin: 0;
   }
 }
-
-.form-group-check-wrap__item {}
