add slider (splidejs), user_profile done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
 @import 'btn.scss';
 @import 'header.scss';
 @import 'settings.scss';
+@import 'slider.scss';
+@import 'user-profile.scss';
 // @import 'index.scss';
 @import 'logo.scss';
 @import 'footer.scss';
