--- a/src/html/views/user_profile.html
+++ b/src/html/views/user_profile.html
@@ -1,113 +1,64 @@
 <%= _.template(require('./../includes/header.html'))() %>
-<script>
-    //document.body.querySelector('header.header').classList.add('header_page-mobnull');
-</script>
-<main class="main">
-  <div class="container container_profile">
-    <div class="container__inner">
-      <div class="userprofile-mob d-xl-none">
-        <div class="userprofile__photo">
-          <div class="up-slider-wrap">
-            <div class="up-slider owl-carousel">
-              <div class="slide">
-                <div class="up-slider__img" style="background-image: url('img/photos/user-00.jpg');"></div>
+  <main class="main">
+    <div class="container container_profile">
+      <div class="container__inner">
+        <div class="userprofile">
+          <div class="userprofile__photo">
+            <div class="splide splide_up" aria-label="Profile photos">
+              <div class="splide__track">
+                <ul class="splide__list">
+                  <li class="splide__slide">
+                    <div class="userprofile-img" style="background-image: url('assets/img/photos/ava.jpg');"></div>
+                  </li>
+                  <li class="splide__slide">
+                    <div class="userprofile-img" style="background-image: url('assets/img/photos/ava.jpg');"></div>
+                  </li>
+                  <li class="splide__slide">
+                    <div class="userprofile-img" style="background-image: url('assets/img/photos/ava.jpg');"></div>
+                  </li>
+                  <li class="splide__slide">
+                    <div class="userprofile-img" style="background-image: url('assets/img/photos/ava.jpg');"></div>
+                  </li>
+                </ul>
               </div>
-              <div class="slide">
-                <div class="up-slider__img" style="background-image: url('img/photos/user-01.jpg');"></div>
+            </div>
+            <a class="btn btn_w100 userprofile__btn" href="#">Claim Her</a>
+          </div>
+          <div class="userprofile__info">
+            <div class="userprofile__data">
+              <div class="userprofile__row">
+                <div class="userprofile__name">Alice<span class="userprofile__age">33</span></div>
+                <div class="userprofile__sep"></div>
+                <div class="userprofile__loc">Paris ~ 20km</div>
               </div>
-              <div class="slide">
-                <div class="up-slider__img" style="background-image: url('img/photos/user-02.jpg');"></div>
+              <div class="compatibility d-flex justify-content-between align-items-center">
+                <div class="compatibility__chart">
+                  <div class="compatibility__title">Interests</div>
+                  <div class="compatibility__progress progress">
+                    <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"><div class="progress-title">30%</div></div>
+                  </div>
+                </div>
+                <div class="compatibility__chart">
+                  <div class="compatibility__title">Location</div>
+                  <div class="compatibility__progress progress">
+                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"><div class="progress-title">60%</div></div>
+                  </div>
+                </div>
+                <div class="compatibility__chart">
+                  <div class="compatibility__title">Matches</div>
+                  <div class="compatibility__progress progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><div class="progress-title">100%</div></div>
+                  </div>
+                </div>
               </div>
-              <div class="slide">
-                <div class="up-slider__img" style="background-image: url('img/photos/user-03.jpg');"></div>
-              </div>
-              <div class="slide">
-                <div class="up-slider__img" style="background-image: url('img/photos/user-04.jpg');"></div>
-              </div>
-              <div class="slide">
-                <div class="up-slider__img" style="background-image: url('img/photos/user-05.jpg');"></div>
-              </div>
-              <div class="slide">
-                <div class="up-slider__img" style="background-image: url('img/photos/user-06.jpg');"></div>
-              </div>
+            </div>
+            <div class="user-profile-about">
+              <div class="user-profile-title user-profile-title_about">About girl</div>
+              <p>We have created a unique combination system that consists of three main factors that produce similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated form, connects people who have interests in similar activities, passions and future aspirations. We also add our own personal touch to the online dating process ensuring that your experience is special and exclusive to you.</p>
             </div>
           </div>
         </div>
-        <a class="btn btn_w100 userprofile__btn" href="#">Claim Her</a>
-      </div>
-      <div class="userprofile">
-        <div class="userprofile__photo d-none d-xl-block">
-          <figure class="userprofile__figure">
-            <img class="userprofile__img" src="img/photos/ava.jpg" alt="Profile photo">
-          </figure>
-        </div>
-        <div class="userprofile__info">
-          <div class="userprofile__row">
-            <div class="userprofile__name">jessi, 32</div>
-            <div class="userprofile__loc">~ 200 km, Venice</div>
-          </div>
-          <div class="user-profile-title d-xl-none">Compability score - 15000</div>
-          <div class="compatibility compatibility_mb d-flex justify-content-between align-items-center">
-            <div class="compatibility__chart">
-              <div class="compatibility__progress progress1">
-                <div class="dotmark"></div>
-                <div class="dotmark"></div>
-                <div class="dotmark"></div>
-              </div>
-              <div class="compatibility__title">Interests</div>
-            </div>
-            <div class="compatibility__chart">
-              <div class="compatibility__progress progress2">
-                <div class="dotmark"></div>
-                <div class="dotmark"></div>
-                <div class="dotmark"></div>
-              </div>
-              <div class="compatibility__title">Location</div>
-            </div>
-            <div class="compatibility__chart">
-              <div class="compatibility__progress progress3">
-                <div class="dotmark"></div>
-                <div class="dotmark"></div>
-                <div class="dotmark"></div>
-              </div>
-              <div class="compatibility__title">Matches</div>
-            </div>
-          </div>
-          <div class="user-profile-about">
-            <div class="user-profile-title user-profile-title_about d-xl-none">About Girl</div>
-            <p>We have created a unique combination system that consists of three main factors that produce similarity
-              of thought and productive connections: Life, freedom and culture.</p>
-          </div>
-          <a class="btn btn_w100 d-none d-xl-block" href="#">Claim Her</a>
-        </div>
-      </div>
-      <div class="user-profile-gallery d-none d-xl-block">
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-00.jpg" alt="">
-        </figure>
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-01.jpg" alt="">
-        </figure>
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-02.jpg" alt="">
-        </figure>
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-03.jpg" alt="">
-        </figure>
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-04.jpg" alt="">
-        </figure>
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-05.jpg" alt="">
-        </figure>
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-06.jpg" alt="">
-        </figure>
-        <figure class="user-profile-gallery__item">
-          <img class="user-profile-gallery__img img-fluid" src="img/photos/user-00.jpg" alt="">
-        </figure>
       </div>
     </div>
-  </div>
-</main>
+  </main>
 <%= _.template(require('./../includes/footer.html'))() %>
