--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -23,7 +23,7 @@ body {
 .container {
   @include make-container(40px);
   @media (min-width: 768px) {
-    @include make-container(24px);
+    @include make-container(30px);
   }
 
   &.container_text {
@@ -33,6 +33,13 @@ body {
     }
     @media (min-width: 1200px) {
       max-width: $container-xl;
+    }
+  }
+
+  &.container_profile {
+    @include make-container(0px);
+    @media (min-width: 768px) {
+      @include make-container(30px);
     }
   }
 }
