--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -49,15 +49,17 @@
   background-position: 50%;
   background-size: cover;
   position: relative;
-  @media (min-width: 400px) {//
+  @include img-mask('../img/photos/mask.svg');
+
+  @media (min-width: 400px) {
     height: 246px;
     max-height: 246px;
   }
-  @media (min-width: 768px) {//
+  @media (min-width: 768px) {
     height: 456px;
     max-height: 456px;
   }
-  @media (min-width: 1200px) {//
+  @media (min-width: 1200px) {
     height: 456px;
     max-height: 456px;
     margin-bottom: 50px;
@@ -66,19 +68,6 @@
     height: 582px;
     max-height: 582px;
     margin-bottom: 50px;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    right: 0;
-    bottom: 0;
-    width: calc(100% + 2px);
-    height: calc(100% + 2px);
-    background-image: url('../img/photos/mask.svg');
-    z-index: 1;
   }
 }
 
