--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -62,7 +62,7 @@ $textarea_border_radius_mob:0;
 
 //User List page wider
 /**/$user_list_wider:           160px;
-/**/$user_list_item_breakpoint: 992px;
+$user_list_item_breakpoint: 992px;
 /**/$user_list_title_color:     $font_color2;
 
 /**/
@@ -71,4 +71,20 @@ $textarea_border_radius_mob:0;
   height: $diameter;
   background-color: $background-color;
   border-radius: 100%;
+}
+
+@mixin img-mask($url) {
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    right: 0;
+    bottom: 0;
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
+    background-image: url($url);
+    z-index: 1;
+  }
 }
