--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'settings.scss';
 @import 'slider.scss';
 @import 'user-profile.scss';
+@import 'user-list.scss';
 // @import 'index.scss';
 @import 'logo.scss';
 @import 'footer.scss';
