--- a/src/scss/btn.scss
+++ b/src/scss/btn.scss
@@ -87,13 +87,13 @@
   }
   &.btn_2 { //user list
     width: 100%;
-    height: 32px;
-    font-size: 10px;
-    padding: 12px 10px 10px;
+    height: 31px;
+    font-size: 11px;
+    padding: 10px 10px;
     @media (min-width: $user_list_item_breakpoint) {
-      height: 63px;
-      font-size: 20px;
-      padding: 22px 15px 20px;
+      height: 59px;
+      font-size: 21px;
+      padding: 19px 15px;
     }
   }
   &.btn_3 { //change photo
