--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -5,7 +5,10 @@
   }
 }
 
-.splide__pagination {}
+.splide__pagination {
+  padding-left: 0;
+}
+
 .splide__pagination__page {
   background: $body_bg_color;
   border: 0;
@@ -30,7 +33,7 @@
 
 .splide_up {
   .splide__track {
-    @include img-mask('../img/photos/mask.svg');
+    @include img-mask('../img/photos/mask.svg', -1px, -1px, calc(100% + 2px), calc(100% + 2px));
   }
   .splide__pagination {
     transform: translateY(-39px);
@@ -44,6 +47,10 @@
 }
 
 .splide_ulist {
-  .splide__pagination {}
-  .splide__pagination__page {}
+  .splide__pagination__page {
+    background: $bg_light_2;
+    &.is-active {
+      background: $btn_bg_color;
+    }
+  }
 }
